2007-10-31 Jim Sack <jgsack@san.rr.com>
	* src/Gramps.py In run(), skip error-dialog for things like 
	exit(0) such as used when processing command-line operations.
	Add missing gtk.main_quit needed to terminate process

2007-10-29 Gary Burton <gary.burton@zen.co.uk>
	* src/RelLib/_Person.py: setting the death index wrongly.

2007-10-29 Gary Burton <gary.burton@zen.co.uk>
	* src/RelLib/_Person.py: reset birth and death indexes after deleting
	an event. Fixes #1327

2007-10-28 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditPlace.py: fixed name of street MonitoredEntry
	* src/Editors/_EditLocation.py: fixed name of street MonitoredEntry
	MonitoredEntry field for street wrongly named as city.
	Caused strange occasional drag and drop bug. issue #1304

2007-10-28 Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayTabs/_EnbeddedList.py: Fixed crash when doing a drag and
	drop with an object that was deleted from a list. issue # 1326

2007-10-26 Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: various:  EOL should be <br> not <p>,
	date is now displayed in the user's locale, source references no
	longer skipped on media pages, allow half-sibling to be shown, allow
	columns to be configurable, event notes are no longer skipped, progress
	indicator no longer gets stuck at 100% for long periods of time with
	large databases

2007-10-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: various improvements

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_GalleryTab.py: remove edit_callback, works via signals now

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: during rebuild, don't do select change
	* src/DisplayTabs/_ButtonTab.py: avoid double call of selection_change
	* src/DisplayTabs/_GrampsTab.py: method to add db connects, and set connects
	* src/Editors/_EditPrimary.py: on add tab pass db connection method